Day 3: added mat-table, logic to add records, keep them in localstorage

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,3 +6,12 @@ main {
 p {
   font-size: clamp(1rem, 0.8269rem + 0.7692vw, 1.5rem);
 }
+:host {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  & .app-main {
+    flex-grow: 1;
+    position: relative;
+  }
+}
