--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,10 +8,23 @@ p {
 }
 :host {
   height: 100%;
-  display: flex;
-  flex-direction: column;
   & .app-main {
+    height: 100%;
     flex-grow: 1;
     position: relative;
   }
+}
+
+mat-sidenav-container,
+mat-sidenav-content,
+mat-sidenav {
+  height: 100%;
+}
+
+mat-sidenav {
+  width: 250px;
+}
+
+main {
+  padding: 10px;
 }
