--- a/src/app/components/day-count/day-count.component.html
+++ b/src/app/components/day-count/day-count.component.html
@@ -1,110 +1,145 @@
-<section>
-  <div class="dc__button-row">
-    <button
-      mat-raised-button
-      i18n
-      (click)="toggle('PROTEIN')"
-      [class._outline]="tmpRecord?.food?.PROTEIN"
-      color="protein"
-    >
-      Белки
-    </button>
-    <button
-      mat-raised-button
-      i18n
-      (click)="toggle('CARBS')"
-      [class._outline]="tmpRecord?.food?.CARBS"
-      color="carbs"
-    >
-      Углеводы
-    </button>
-    <button
-      mat-raised-button
-      i18n
-      (click)="toggle('FATS')"
-      [class._outline]="tmpRecord?.food?.FATS"
-      color="fats"
-    >
-      Жиры
-    </button>
-    <button
-      mat-raised-button
-      i18n
-      (click)="toggle('FIBER')"
-      [class._outline]="tmpRecord?.food?.FIBER"
-      color="fiber"
-    >
-      Клетчатка
-    </button>
-    <button
-      mat-raised-button
-      i18n
-      (click)="toggle('NYAMNYAM')"
-      [class._outline]="tmpRecord?.food?.NYAMNYAM"
-      color="yammi"
-    >
-      Вкусняшка
-    </button>
-    <button
-      mat-raised-button
-      i18n
-      (click)="toggle('WATER')"
-      [class._outline]="tmpRecord?.food?.WATER"
-      color="water"
-    >
-      Вода
-    </button>
-    <br />
-    <button
-      mat-raised-button
-      i18n
-      (click)="save()"
-      color="save"
-      [disabled]="saveDisabled"
-    >
-      <mat-icon>offline_pin</mat-icon><span>Добавить запись</span>
-    </button>
-  </div>
-</section>
-<section class="dc_table">
-  <table *ngIf="log.length" mat-table [dataSource]="log">
-    <ng-container matColumnDef="Date">
-      <th mat-header-cell *matHeaderCellDef i18n>Дата</th>
-      <td mat-cell *matCellDef="let record" i18n>
-        {{ record.date | date: "dd.MM.yyyy HH:mm:ss" }}
-        <ng-container *ngIf="record.timeDifference">
-          <br />
-          <span class="_weak">{{ record.timeDifference }}</span>
-        </ng-container>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="Food">
-      <th mat-header-cell *matHeaderCellDef i18n>Еда</th>
-      <td mat-cell *matCellDef="let record" i18n class="dc__record">
-        {{ record.food | parseFood }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="MealType">
-      <th mat-header-cell *matHeaderCellDef i18n>Тип</th>
-      <td
-        mat-cell
-        *matCellDef="let record"
+<ng-container>
+  <section>
+    <div class="dc__button-row">
+      <button
+        mat-raised-button
         i18n
-        [class._bold]="record.mealType === 'Основной приём пищи'"
+        (click)="toggle('PROTEIN')"
+        [class._outline]="tmpRecord?.food?.PROTEIN"
+        color="protein"
       >
-        {{ record.mealType }}
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let emprow; columns: displayedColumns"></tr>
-  </table>
-</section>
+        Белки
+      </button>
+      <button
+        mat-raised-button
+        i18n
+        (click)="toggle('CARBS')"
+        [class._outline]="tmpRecord?.food?.CARBS"
+        color="carbs"
+      >
+        Углеводы
+      </button>
+      <button
+        mat-raised-button
+        i18n
+        (click)="toggle('FATS')"
+        [class._outline]="tmpRecord?.food?.FATS"
+        color="fats"
+      >
+        Жиры
+      </button>
+      <button
+        mat-raised-button
+        i18n
+        (click)="toggle('FIBER')"
+        [class._outline]="tmpRecord?.food?.FIBER"
+        color="fiber"
+      >
+        Клетчатка
+      </button>
+      <button
+        mat-raised-button
+        i18n
+        (click)="toggle('NYAMNYAM')"
+        [class._outline]="tmpRecord?.food?.NYAMNYAM"
+        color="yammi"
+      >
+        Вкусняшка
+      </button>
+      <button
+        mat-raised-button
+        i18n
+        (click)="toggle('WATER')"
+        [class._outline]="tmpRecord?.food?.WATER"
+        color="water"
+      >
+        Вода
+      </button>
+      <br />
+      <mat-form-field class="example-form-field">
+        <mat-label>Заметка: </mat-label>
+        <input matInput type="text" [(ngModel)]="comment" />
+        <button
+          mat-button
+          *ngIf="comment"
+          matSuffix
+          mat-icon-button
+          aria-label="Clear"
+          (click)="comment = ''"
+        >
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
+      <br />
+      <button
+        mat-raised-button
+        i18n
+        (click)="save()"
+        color="save"
+        [disabled]="saveDisabled"
+      >
+        <mat-icon>offline_pin</mat-icon><span>Добавить запись</span>
+      </button>
 
-<section class="dc_rule-buttons">
-  <button mat-raised-button i18n (click)="undo()" [disabled]="!log.length">
-    <mat-icon>undo</mat-icon><span>Удалить последнюю запись</span>
-  </button>
-  <button mat-raised-button i18n (click)="clear()" [disabled]="!log.length">
-    <mat-icon>clear</mat-icon><span>Очистить</span>
-  </button>
-</section>
+      <button
+        mat-raised-button
+        i18n
+        (click)="undo()"
+        [disabled]="!log.length"
+        title="Удалить последнюю запись"
+      >
+        <mat-icon>undo</mat-icon>
+      </button>
+      <button
+        mat-raised-button
+        i18n
+        (click)="clear()"
+        [disabled]="!log.length"
+        title="Очистить таблицу"
+      >
+        <mat-icon>clear</mat-icon>
+      </button>
+    </div>
+  </section>
+  <section class="dc_table">
+    <table *ngIf="log.length" mat-table [dataSource]="log">
+      <ng-container matColumnDef="Date">
+        <th mat-header-cell *matHeaderCellDef i18n>Дата</th>
+        <td mat-cell *matCellDef="let record" i18n>
+          {{ record.date | date: "dd.MM.yyyy HH:mm:ss" }}
+          <ng-container *ngIf="record.timeDifference">
+            <br />
+            <span class="_weak">{{ record.timeDifference }}</span>
+          </ng-container>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="Food">
+        <th mat-header-cell *matHeaderCellDef i18n>Еда</th>
+        <td mat-cell *matCellDef="let record" i18n class="dc__record">
+          {{ record.food | parseFood }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="MealType">
+        <th mat-header-cell *matHeaderCellDef i18n>Тип</th>
+        <td
+          mat-cell
+          *matCellDef="let record"
+          i18n
+          [class._bold]="record.mealType === 'Основной приём пищи'"
+        >
+          {{ record.mealType }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="Commentary">
+        <th mat-header-cell *matHeaderCellDef i18n>Заметки</th>
+        <td mat-cell *matCellDef="let record" class="dc__record">
+          {{ record.commentary }}
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let emprow; columns: displayedColumns"></tr>
+    </table>
+  </section>
+
+  <section class="dc_rule-buttons"></section>
+</ng-container>
